# Franka-joint-trajetory-controller-based-on-impedance-control

./: README.md
franka_effort_controller/: CMakeLists.txt  franka_ros_control_plugins.xml  package.xml  readme.md  readme_20230703.txt
franka_effort_controller/cfg/: CarImpParam.cfg  ComplianceParam.cfg  Wrench.cfg
franka_effort_controller/config/: TestKivy copy.kv  TestKivy.kv
franka_effort_controller/include/franka_effort_controller/: Frhardware_interface_adapter.h  franka_car_imp_controller.h  franka_compliance_controller.h  franka_effort_controller copy.h  franka_effort_controller_imp rbdyn.h  franka_effort_controller_imp(copy).h  franka_force_controller.h  pseudo_inversion.h  urdf.h
franka_effort_controller/launch/: start_force_control.launch  stop_force_control.launch
franka_effort_controller/scripts/: PandaMassage.py  PandaMoveGroup.py  body_exp.py  data_record.py  sg_exp_with_phantom.py
franka_effort_controller/src/: franka_car_imp_controller.cpp  franka_compliance_controller copy 20221219.cpp  franka_compliance_controller copy.cpp  franka_compliance_controller.cpp  franka_effort_controller copy.cpp  franka_force_controller.cpp  test_node.cpp  urdf.cpp
franka_effort_controller/strain_gauge_Data/: 20230313.txt
